# mamba-attention-recursive-hybrid

./: .gitignore  AGENTS.md  COMPLEXITY_REPORT.md  README.md  TRAINING.md  main.ipynb  pyproject.toml
.superpowers/sdd/: progress.md
docs/superpowers/plans/: 2026-07-11-mamba-attention-hybrid.md
docs/superpowers/specs/: 2026-07-11-mamba-attention-hybrid-design.md
mamba_hybrid/: __init__.py  answer_update.py  attention.py  config.py  evaluation.py  halting.py  inference.py  loss.py  model.py  operators.py  planning.py  printer.py  ssm.py
mamba_hybrid/tasks/: __init__.py  common.py  dijkstra.py  gsm8k.py  maze.py
native/: Cargo.toml
native/src/: lib.rs
scripts/: __init__.py  diagnose_sudoku.py  download_all_datasets.py  evaluate_dijkstra.py  evaluate_gsm8k.py  evaluate_maze.py  evaluate_multitask.py  evaluate_sudoku.py  generate_data.py  generate_massive_maze.py  generate_massive_sudoku.py  test_dijkstra_overfit.py  test_maze_overfit.py  test_multitask_overfit.py  test_sudoku_overfit.py  train_dijkstra.py  train_gsm8k.py  train_maze.py  train_maze_laptop.py  train_multitask.py  train_sudoku.py  utils.py
tests/: test_answer_update.py  test_attention.py  test_config.py  test_data_generation.py  test_dijkstra_task.py  test_evaluation.py  test_gsm8k_task.py  test_halting.py  test_inference.py  test_integration.py  test_loss.py  test_maze_task.py  test_model.py  test_native_multitask.py  test_operators.py  test_planning.py  test_printer.py  test_q_learning.py  test_script_utils.py  test_ssm.py  test_training_models.py
